[package]
name = "obs-wincat"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
ahash = { version = "0.8", default-features = false, features = ["std", "no-rng", "serde"] }
anyhow = "1"
cfg-if = "1"
crossbeam-channel = "0.5"
log = "*"
mlua = { version = "0.9", features = ["luajit52", "serialize", "send", "vendored"] }
obs-wrapper = "0.4"
once_cell = "1"
parking_lot = "0.12"
scopeguard = "1"
serde = { version = "1", features = ["derive"] }
windows = { version = "0.52", features = [
	"Win32_Foundation",
	"Win32_Security",
	"Win32_System_SystemServices",
	"Win32_System_Threading",
	"Win32_System_Diagnostics_ToolHelp",
	"Win32_UI_WindowsAndMessaging",
] }
wtf8 = "0.1"

[profile.release]
codegen-units = 1
incremental = false
lto = "fat"
opt-level = 3
